fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     display: flex;
     flex: 1;
     text-align: center;
@@ -7,4 +7,4 @@
 #root {
     display: flex;
     flex: 1;
-}
+} */
